--- a/town_hall_1/c6_index.html
+++ b/town_hall_1/c6_index.html
@@ -24,6 +24,19 @@
 			<blockquote>&ldquo;Each year I give a ticket package to each of our family members. 
 				I think of it as the gift of knowledge...and that is priceless.&rdquo;</blockquote>
 			<h1>Speaker of the Month</h1>
+			h1 {
+                              font-size: 150%;
+                              padding-top: 0.5em;
+                              padding-bottom: 0.25em;
+                              margin: 0;
+                           }
+
+			article img {
+                            float: right;
+                            margin: 10px 0 10px 10px; 
+                            border: 1px solid #000; 
+                         }
+			
 			<article>
 				<h2>Fossil Threads in the Web of Life</h2>
 				<img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur">
