--- a/town_hall_1/c6_index.html
+++ b/town_hall_1/c6_index.html
@@ -21,8 +21,10 @@
 				all-volunteer board of directors. Our mission is to bring nationally and 
 				internationally renowned, thought-provoking speakers who inform, educate, 
 				and entertain our audience! As one or our members told us:</p>
-			<blockquote>&ldquo;Each year I give a ticket package to each of our family members. 
-				I think of it as the gift of knowledge...and that is priceless.&rdquo;</blockquote>
+			          <blockquote>&ldquo;Each year I give a ticket package to each of our family 
+				   members. I think of it as the gift of knowledge...and that is 
+				   priceless.&rdquo;</blockquote>
+			
 			<h1>Speaker of the Month</h1>
 			h1 {
                               font-size: 150%;
